# fox-reader

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
resources/: app_window.ui  com.github.kopecmaciej.Settings.gschema.xml  org.fox-reader.Settings.gschema.xml  piper_installer.ui  piper_window.ui  resources.gresource.xml  style.css  voice_list.ui  voices_box.ui  window.ui
resources/styles/: style.css
resources/ui/: about_dialog.ui  ai_chat.ui  ai_chat_row.ui  audio_controls.ui  pdf_reader.ui  settings.ui  settings_dialog.ui  text_reader.ui  voice_list.ui  window.ui
scripts/: fox-piper.sh  piper-reader.sh  piper.sh
src/: cli.rs  config.rs  dispatcher.rs  downloader.rs  file_handler.rs  hf.rs  main.rs  paths.rs  runtime.rs  settings.rs  ui.rs  voice_manager.rs
src/core/: file_handler.rs  kokoros_manager.rs  llm_manager.rs  mod.rs  piper.rs  process_manager.rs  runtime.rs  speech_dispatcher.rs  tts.rs  voice_manager.rs
src/ui/: about_dialog.rs  ai_chat.rs  ai_chat_row.rs  audio_controls.rs  buttons.rs  dialogs.rs  helpers.rs  keybindings.rs  kokoros_download_dialog.rs  mod.rs  pdf_reader.rs  piper.rs  piper_installer.rs  progress_dialog.rs  settings.rs  settings_dialog.rs  text_reader.rs  voice_events.rs  voice_list.rs  voice_row.rs  widgets.rs  window.rs
src/utils/: audio_backend.rs  audio_player.rs  audio_processing.rs  debouncer.rs  espeak_handler.rs  file_handler.rs  highlighter.rs  kokoros_downloader.rs  markdown.rs  mod.rs  pdf_highlighter.rs  pdfium.rs  process.rs  progress_tracker.rs  schema_handler.rs  text.rs  text_highlighter.rs  whisper_downloader.rs
