[package]
name = "piper-reader"
version = "0.1.0"
edition = "2021"
authors = ["maciejkopec92@gmail.com"]

[dependencies]
gio = "0.20.6"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
glib-build-tools = "0.20.0"
