[package]
name = "fox-reader"
version = "0.1.1"
edition = "2021"
authors = ["maciejkopec92@gmail.com"]
repository = "https://github.com/kopecmaciej/fox-reader"

[dependencies]
dirs = "5.0.1"
gio = "0.20.6"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7.1", features = ["v1_6"], package = "libadwaita" }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
flate2 = "1.0.35"
tar = "0.4.43"
regex = "1.11.1"
rodio = "0.20.1"
pdfium-render = "0.8.29"
whisper-rs = "0.14.2"
cpal = "0.15.3"
piper-rs = "0.1.9"
clap = "4.5.32"
tokio-stream = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
